<resources>
    <string name="app_name">PocketBox</string>

    <string name="version_summary">v%1$s (%2$d)</string>
    <string name="version_summary_full">Version %1$s (%2$d) [%3$s]</string>

    <!-- Drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- Toolbar titles for each page -->
    <string name="title_home">PocketBox</string>
    <string name="title_calcTotal">Calculate Total</string>
    <string name="title_calcTip">Calculate Tip</string>
    <string name="title_convTemp">Temperature Converter</string>
    <string name="title_numFormat">Number Formatter</string>
    <string name="title_daysApart">Days Apart</string>
    <string name="title_percChange">Percent Calculator</string>
    <string name="title_about">About</string>

    <string name="header_msg" />

    <!-- About Page -->
    <string name="about_license">PocketBox is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.</string>

</resources>