<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_pages" android:checkableBehavior="none">

        <item
            android:id="@+id/nav_calcTotal"
            android:title="@string/title_calcTotal"
            android:icon="@drawable/ic_card"/>

        <item
            android:id="@+id/nav_calcTip"
            android:title="@string/title_calcTip"
            android:icon="@drawable/ic_money"/>

        <item
            android:id="@+id/nav_convTemp"
            android:title="@string/title_convTemp"
            android:icon="@drawable/ic_thermometer"/>

        <item
            android:id="@+id/nav_numFormat"
            android:title="@string/title_numFormat"
            android:icon="@drawable/ic_number"/>

        <item
            android:id="@+id/nav_daysApart"
            android:title="@string/title_daysApart"
            android:icon="@drawable/ic_calendar"/>

        <item
            android:id="@+id/nav_percChange"
            android:title="@string/title_percChange"
            android:icon="@drawable/ic_percent"/>

    </group>

    <group android:id="@+id/pref_pages" android:checkableBehavior="none">

        <item
            android:id="@+id/nav_about"
            android:title="@string/title_about"
            android:icon="@drawable/ic_info"/>

    </group>

</menu>