<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.Home">

    <TextView
        android:id="@+id/tv_v_homeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Select Which Tool to Use:"
        android:textSize="20sp"
        android:fontFamily="@font/manrope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_v_hf_toolsList"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_v_homeMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Tool Buttons -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_v_hf_calcTotal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/title_calcTotal"
                app:icon="@drawable/baseline_credit_card_24"
                app:iconGravity="start"
                app:iconSize="26dp"
                android:textAppearance="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_v_hf_calcTip"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/title_calcTip"
                app:icon="@drawable/baseline_attach_money_24"
                app:iconGravity="start"
                app:iconSize="26dp"
                android:textAppearance="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_v_hf_convTemp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/title_convTemp"
                app:icon="@drawable/baseline_device_thermostat_24"
                app:iconGravity="start"
                app:iconSize="26dp"
                android:textAppearance="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_v_hf_numFormat"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/title_numFormat"
                app:icon="@drawable/baseline_numbers_24"
                app:iconGravity="start"
                app:iconSize="26dp"
                android:textAppearance="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_v_hf_daysApart"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/title_daysApart"
                app:icon="@drawable/baseline_calendar_month_24"
                app:iconGravity="start"
                app:iconSize="26dp"
                android:textAppearance="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_v_hf_percChange"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/title_percChange"
                app:icon="@drawable/baseline_percent_24"
                app:iconGravity="start"
                app:iconSize="26dp"
                android:textAppearance="@style/Button" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>